--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://PrateekMishra-1.github.io/NewsApp---React",
+  "homepage": "https://github.com/PrateekMishra-1/NewsApp---React",
   "name": "newsapp",
   "version": "0.1.0",
   "private": true,
